--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,7 +6,8 @@ package:
   version: {{ version }}
 
 source:
-  path: C:\\Users\\wasonj\\Documents\\RobotRaconteur2\\drivers\\gazebo_robotraconteur_sim_drivers
+  git_url: https://github.com/robotraconteur-contrib/gazebo-robotraconteur-sim-drivers.git
+  git_rev: {{ version }}
 
 build:
   number: 0
