--- a/.ci_support/linux_64_.yaml
+++ b/.ci_support/linux_64_.yaml
@@ -1,7 +1,7 @@
 cdt_name:
 - cos6
 channel_sources:
-- robotraconteur,conda-forge
+- robotraconteur,wasontech,conda-forge
 channel_targets:
 - robotraconteur main
 docker_image:
